--- a/src/components/PanoramaViewer/PannellumViewer.css
+++ b/src/components/PanoramaViewer/PannellumViewer.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    background: #000; /* Ensure background color for loading state */
 }
 
 .overlay {
@@ -16,13 +17,28 @@
     width: 100%;
 }
 
+.menu-button {
+    position: absolute;
+    left: 20px;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
 .scene-names {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    bottom: 60px;
+    left: 20px;
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
 }
 
 .scene-name {
